# lambda-s3-bucket-clamav

./: Dockerfile  Dockerfile.jenkins  Jenkinsfile  Makefile  Pipfile  README.md  build_lambda.sh  pyproject.toml  repository.yaml
tests/: test_scan.py
